# elementalBack

./: .gitignore  CONTRIBUTING.md  README.md  alembic.ini  main.py  pyproject.toml  settings.dev.toml
app/: __init__.py  settings.py
app/elemental/: cover.py  utils.py
app/elemental/common/: __init__.py  error_codes.py  responses.py
app/elemental/common/enums/: numerical.py  text.py
app/elemental/common/schemas/: __init__.py  elemental.py
app/elemental/exceptions/: __init__.py  application.py  auth.py  base.py  external.py  validations.py
app/elemental/logging/: __init__.py  formatters.py  logger.py
app/elemental/security/: __init__.py  roles.py
app/elemental/security/passwords/: __init__.py  utils.py
app/elemental/security/tokens/: __init__.py  provider.py  settings.py  types.py
app/elemental/settings/: __init__.py  elemental.py  state.py
app/gateways/web/: __init__.py  create_app.py  utils.py
app/gateways/web/auth/: dependencies.py  jwt_bearer.py
app/gateways/web/lifespan/: __init__.py  lifespan.py
app/gateways/web/middlewares/: __init__.py  cors.py  headers.py  logging.py  security.py
app/gateways/web/routers/: __init__.py  docs.py  (+1 more)
app/infrastructure/: __init__.py
app/infrastructure/email/: __init__.py  exceptions.py  manager.py  settings.py  utils.py
app/infrastructure/filemanager/: __init__.py  exceptions.py  manager.py  settings.py
app/infrastructure/oauth/: __init__.py  exceptions.py  factory.py  manager.py  settings.py
app/src/shared/: __init__.py
test/: conftest.py
test/unit/elemental/: test_cover.py  test_utils.py
(+36 files in other folders)
